--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "drizzy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "compression": "^1.7.2",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "request": "^2.85.0"
