--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "giphy-js-sdk-core": "^1.0.3",
     "morgan": "^1.9.0",
     "request": "^2.85.0"
   }
